package ubii;
syntax = "proto3";

import "./topicDataMessage.proto";
import "./subscribtionMessage.proto";
import "./registrationMessage.proto";
import "./errorMessage.proto";

message UbiiMessage {
    string message_type = 1; 
    oneof submessage{
        TopicDataMessage topic_data_message = 2;
        SubscribtionMessage subscribtion_message = 3;
        RegistrationMessage registration_message = 4;
        ErrorMessage error_message = 5;
    }
}